Change 'russian' to 'local' and ask on local field.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>Irregular Verbs</h2>
 
     <form>
-    	<span id="russian"></span>
+    	<span id="local"></span>
 
     	<span id="first"></span> &mdash;
       <span id="second"></span> &mdash;
