2 level of exercices
 - Easy : legacy one + possible ask on local translation
 - Hard : show only 1 word to find the good answer.

--- a/index_hard.html
+++ b/index_hard.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>Irregular Verbs</title>
+<title>Irregular Verbs (Hard)</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -13,8 +13,8 @@
 <body>
 
   <div>
-    <h2>Irregular Verbs</h2>
-	<input type="hidden" id="level" value="Easy">
+    <h2>Irregular Verbs (Hard)</h2>
+	<input type="hidden" id="level" value="Hard">
 	
     <form>
     	<span id="local"></span>
